2000-08-25  Erez Zadok  <ezk@lynn.soscorp.com>

	* conf/mount/mount_linux.c (mount_linux): MNT2_NFS_OPT_VER3 may
	is no defined on older Linux systems (kernel 2.0.36)

2000-08-19  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf.5: correct swapped descriptions for ldap_base
	and ldap_hostports.

	* doc/am-utils.texi: correct swapped descriptions for ldap_base
	and ldap_hostports.

	* scripts/amd.conf-sample: swap examples for ldap_base and
	ldap_hostports.

2000-08-13  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf-sample: -O is CLI equivalent to "os"
	amd.conf parameter

2000-07-30  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* scripts/amd.conf-sample (nfs_retransmit_counter): correct
	meaning and use of parameter

2000-07-23  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* doc/am-utils.texi: updated URLs to www.am-utils.org.

2000-07-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* doc/am-utils.texi (Supported Platforms): document osf4.0f

2000-06-19  Erez Zadok  <ezk@vir.cs.columbia.edu>

	* doc/am-utils.texi (dollar Selector Variable): document
	${dollar}.

	* amd/opts.c: special new variable ${dollar} which expands into a
	literal '$' sign.  Otherwise there is no way to include a literal
	dollar symbol in an amd map.

2000-06-11  Ion Badulescu  <ib42@moisil.cs.columbia.edu>

	* amd/opts.c (eval_selectors): don't deref opt after it's been
	XFREE'd

2000-06-11  Erez Zadok  <ezk@earth.cs.columbia.edu>

	* amd/opts.c: move mount_type expansion until later in the list,
	so common variable are "hit" first.

2000-06-11  Ion Badulescu  <ib42@moisil.cs.columbia.edu>

	* amd/opts.c (split_opts, eval_selectors): split old function
	eval_opts into two, one that only splits non-selectors and
	assigns the values to fs_static, and one that only evaluates
	selectors; also simplified the rather obfuscated logic inside
	these functions
	(expand_op): made it take a char * instead of a structure from